# tradestation-sdk-python

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_UPDATES_SUMMARY.md  FEATURES.md  FINAL_STATUS.md  INSTALLATION.md  LICENSE  LIMITATIONS.md  MANIFEST.in  MIGRATION.md  MIGRATION_SUMMARY.md  OAUTH_PORT_ISSUE.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  V1.0.1_REVIEW.md  __init__.py  accounts.py  client.py  config.py  generate_model_schemas.py  logger.py  mappers.py  market_data.py  order_executions.py  orders.py  positions.py  pyproject.toml  requirements-dev.txt  requirements.txt  session.py  setup.py  streaming.py  (+1 more)
.github/workflows/: README.md  cd.yml  ci.yml  sdk-tests.yml
cli/: README.md  test_connection.py
docs/: API_COVERAGE.md  API_ENDPOINT_MAPPING.md  API_REFERENCE.md  API_STRUCTURE.md  API_STRUCTURE_DETAILED.md  AUDIT_FILE_REFERENCES.md  CANONICAL_SDK_INVENTORY.md  DOCS_STRUCTURE_PROPOSAL.md  FEATURE_COMPARISON.md  GETTING_STARTED.md  INDEX.md  MIGRATION_COMPLETE.md  MODELS.md  OPENAPI_ANALYSIS_SUMMARY.md  README.md  ROADMAP.md  SDK_FUNCTIONS_LIST.md  SUBMODULE_INTEGRATION.md  TRAILING_STOP_VARIATIONS.md
docs/analysis/: README.md  final-status.md  openapi-analysis.md  roadmap.md
docs/api/: README.md  coverage.md  operations.md  reference.md  sdk_endpoints.md  structure.md
docs/architecture/: README.md  feature-comparison.md  features.md  gap-analysis.md  limitations.md  overview.md
docs/getting-started/: README.md  installation.md  quickstart.md
docs/guides/: README.md  cheatsheet.md  code-examples.md  data-transformation.md  deployment.md  migration.md  order-functions.md  submodule-integration.md  usage-examples.md
docs/models/: README.md
docs/reference/: README.md  functions-list.md  new-functions.md  sdk-models-schema.json  trailing-stops.md
examples/: 01_authentication.ipynb  03_market_data.ipynb  04_placing_orders.ipynb  README.md  quick_start.py  requirements.txt
models/: README.md  __init__.py  accounts.py  bars.py  options.py  order_executions.py  order_wrappers.py  quotes.py  streaming.py  symbols.py
operations/: README.md  __init__.py  accounts.py  market_data.py  order_executions.py  orders.py  positions.py  streaming.py
scripts/: README.md  convert-markdown-metadata.py  generate_model_schemas.py  validate-markdown-metadata.py  validate_links.py
tests/: README.md  __init__.py  conftest.py  test_accounts.py  test_client.py  test_client_enhanced.py  test_config.py  test_debug_path_assert.py  test_endpoints.py  test_error_parsing.py  test_exceptions.py  test_logging.py  test_market_data.py  test_models.py  test_order_executions.py  test_orders.py  test_orders_complex.py  test_positions.py  test_pydantic_contract.py  test_sdk.py  test_session.py  test_streaming.py
tests/fixtures/: README.md  (+3 more)
tradestation/: __init__.py  accounts.py  config.py  exceptions.py  logger.py  mappers.py  market_data.py  order_executions.py  orders.py  positions.py  session.py  streaming.py  validation.py
tradestation_python_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
utils/: README.md  __init__.py  client.py  mappers.py
(+23 files in other folders)
